test/memory/benmcd/badDomainType.good
badDomainType.chpl:5: error: 'tryCreateArray' is only supported on default rectangular and block domains
