test/memory/benmcd/badDomainType.chpl
use CyclicDist;

var D = Cyclic.createDomain(0..10);

D.tryCreateArray(int);
